Menu BG Color on mobile issue fixed

--- a/assets/admin/custom/custom.scss
+++ b/assets/admin/custom/custom.scss
@@ -132,6 +132,13 @@ body {
 	background-color: rgba(0, 31, 64, 0.94) !important;
 }
 
+/* Mobile Menu */
+@media (max-width: 1280px) {
+	#s-main-menu {
+		background-color: color(spe-core-blue-1) !important;
+	}
+}
+
 [data-ma-header="teal"]:before,
 [data-ma-header="teal"] #header {
 	// background-color: rgba(19, 86, 125, 0.94) !important;
